# astratag

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  clang-tidy.sh  run-all-checks.sh  run_detector.sh
cmake/: generate_embedded_data.cmake
config/: README.md  camera_example.json
data/: README.md
docs/: BUILDING.md
examples/: README.md  detect_tags.cpp
include/: detector.hpp  embedded_data.hpp  quadrilateral.hpp  signature.hpp  types.hpp  visualization.hpp
scripts/: run_detector.sh
src/: detector.cpp  embedded_data.cpp.in  main.cpp  quadrilateral.cpp  signature.cpp  visualization.cpp
